# pool-telemetry-recorder

./: .gitignore  AGENT_README.md  README.md  pyproject.toml  requirements.txt
scripts/: setup_venv.ps1
src/pool_telemetry/: app.py  config.py  db.py  exporter.py  sessions.py  storage.py
src/pool_telemetry/analysis/: __init__.py  event_detector.py  physics.py  shot_detector.py
src/pool_telemetry/coaching/: __init__.py  coach.py
src/pool_telemetry/cv/: __init__.py  calibration.py  detector.py  tracker.py
src/pool_telemetry/gemini/: __init__.py  client.py  processor.py
src/pool_telemetry/ui/: dialogs.py  export_dialog.py  main_window.py  session_browser.py  settings_dialog.py
src/pool_telemetry/video/: sources.py  worker.py
tests/: __init__.py  test_config.py  test_db.py  test_exporter.py  test_gemini.py  test_sessions.py  test_storage.py  test_video_sources.py
