[project]
name = "pool-telemetry-recorder"
version = "1.0.0"
description = "Pool/billiards telemetry recorder using Gemini Live API"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.pyright]
pythonVersion = "3.10"
include = ["src"]
